--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.physics": "1.0.0-pre.15",
     "com.unity.render-pipelines.universal": "14.0.3",
     "com.unity.test-framework": "1.1.33",
+    "com.unity.test-framework.performance": "2.8.1-preview",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
