--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.21.1",
     "com.unity.burst": "1.8.0-pre.2",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.entities.graphics": "1.0.0-pre.15",
-    "com.unity.ide.rider": "3.0.16",
+    "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
