--- a/Assets/Survival/Items/Survival.Items.asmdef
+++ b/Assets/Survival/Items/Survival.Items.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Survival.Inventory",
-    "rootNamespace": "Survival.Inventory",
+    "name": "Survival.Items",
+    "rootNamespace": "Survival.Items",
     "references": [
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
