--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,22 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.21.1",
-    "com.unity.burst": "1.8.0-pre.2",
+    "com.unity.burst": "1.7.4",
+    "com.unity.cinemachine": "2.9.4",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.entities.graphics": "1.0.0-pre.15",
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
+    "com.unity.netcode": "1.0.0-pre.15",
     "com.unity.physics": "1.0.0-pre.15",
     "com.unity.render-pipelines.universal": "14.0.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.test-framework.performance": "2.8.1-preview",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
+    "com.unity.transport": "2.0.0-pre.3",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.3",
     "com.unity.visualscripting": "1.7.8",
