--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.inputsystem": "1.4.4",
     "com.unity.netcode": "1.0.0-pre.15",
     "com.unity.physics": "1.0.0-pre.15",
+    "com.unity.platforms": "1.0.0-exp.6",
     "com.unity.render-pipelines.universal": "14.0.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.test-framework.performance": "2.8.1-preview",
