--- a/Assets/Survival/Extensions/Editor/Survival.Editor.asmdef
+++ b/Assets/Survival/Extensions/Editor/Survival.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Survival.UnityEditor",
-    "rootNamespace": "Survival.UnityEditor",
+    "name": "Survival.Editor",
+    "rootNamespace": "Survival.Editor",
     "references": [
         "GUID:759b8dcc7705c034cbbcd90dedc8cd95"
     ],
