--- a/Assets/Survival/Extensions/Survival.Extensions.asmdef
+++ b/Assets/Survival/Extensions/Survival.Extensions.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Survival.Editor",
-    "rootNamespace": "Survival.Editor",
+    "name": "Survival.Extensions",
+    "rootNamespace": "Survival.Extensions",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
