--- a/Assets/Scripts/GamePlay/Survival.GamePlay.asmdef
+++ b/Assets/Scripts/GamePlay/Survival.GamePlay.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "#SCRIPTNAME#",
-    "rootNamespace": "#SCRIPTNAME#",
+    "name": "Survival.GamePlay",
+    "rootNamespace": "Survival.GamePlay",
     "references": [
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
@@ -8,9 +8,8 @@
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:953adc2a6b8b4e3c8df5b728bcd546e9",
-        "GUID:20f8fb38544994b97b68d79a6c92b7c1",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
-        "GUID:e00140a815de944528348782854abe39"
+        "GUID:a5baed0c9693541a5bd947d336ec7659"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
