--- a/Assets/Scripts/Netcode/Survival.Netcode.asmdef
+++ b/Assets/Scripts/Netcode/Survival.Netcode.asmdef
@@ -7,7 +7,10 @@
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:953adc2a6b8b4e3c8df5b728bcd546e9"
+        "GUID:953adc2a6b8b4e3c8df5b728bcd546e9",
+        "GUID:20f8fb38544994b97b68d79a6c92b7c1",
+        "GUID:63afb046c8423dd448ae7aba042ea63d",
+        "GUID:e00140a815de944528348782854abe39"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
