--- a/Assets/Scripts/Shared/Survival.Shared.asmdef
+++ b/Assets/Scripts/Shared/Survival.Shared.asmdef
@@ -1,19 +1,17 @@
 {
-    "name": "Survival.UI",
-    "rootNamespace": "Survival.UI",
+    "name": "Survival.Shared",
+    "rootNamespace": "Survival.Shared",
     "references": [
+        "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
-        "GUID:734d92eba21c94caba915361bd5ac177",
-        "GUID:953adc2a6b8b4e3c8df5b728bcd546e9",
-        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:734d92eba21c94caba915361bd5ac177"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
