--- a/Assets/Scripts/GamePlay/Survival.GamePlay.asmdef
+++ b/Assets/Scripts/GamePlay/Survival.GamePlay.asmdef
@@ -9,7 +9,8 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:953adc2a6b8b4e3c8df5b728bcd546e9",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
-        "GUID:a5baed0c9693541a5bd947d336ec7659"
+        "GUID:a5baed0c9693541a5bd947d336ec7659",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
