--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.entities.graphics": "1.0.10",
     "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.inputsystem": "1.6.1",
     "com.unity.netcode": "1.0.11",
     "com.unity.physics": "1.0.10",
     "com.unity.render-pipelines.universal": "14.0.8",
