--- a/Assets/Scripts/Datas/Survival.Datas.asmdef
+++ b/Assets/Scripts/Datas/Survival.Datas.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Survival.Datas",
     "rootNamespace": "Survival.Datas",
-    "references": [],
+    "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
