--- a/Assets/Scripts/UI/Survival.UI.asmdef
+++ b/Assets/Scripts/UI/Survival.UI.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:bb59c233337b32540970483c2d4f03f9",
         "GUID:c80c12a0c4c96424fbc7c8cf094cebf4",
+        "GUID:6f565cd295648d045a90deb54364f311",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:953adc2a6b8b4e3c8df5b728bcd546e9",
